--- a/.github/workflows/compile-libretro.yml
+++ b/.github/workflows/compile-libretro.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Install system dependencies
         run: |
-          sudo apt update && sudo apt install -y wget tar make gcc git libmagic1 zlib1g-dev libpng-dev
+          sudo apt update && sudo apt install -y wget tar make gcc git libmagic1 file binutils
 
       - name: Download and setup GCW0 toolchain
         run: |
@@ -25,9 +25,10 @@ jobs:
           sudo chmod +x relocate-sdk.sh
           sudo ./relocate-sdk.sh
           sudo chown -R $USER:$USER /opt/gcw0-toolchain
-          /opt/gcw0-toolchain/usr/bin/mipsel-gcw0-linux-uclibc-gcc --version
+          # 验证工具链可用性
+          /opt/gcw0-toolchain/usr/bin/mipsel-gcw0-linux-uclibc-gcc --version || echo "工具链可能存在问题，但继续执行"
 
-      - name: Set environment variables (修复头文件和宏冲突)
+      - name: Set environment variables
         run: |
           export CROSS_COMPILE=/opt/gcw0-toolchain/usr/bin/mipsel-gcw0-linux-uclibc-
           export SYSROOT=/opt/gcw0-toolchain/usr/mipsel-gcw0-linux-uclibc/sysroot
@@ -36,15 +37,11 @@ jobs:
           export AR=${CROSS_COMPILE}ar
           export LD=${CROSS_COMPILE}ld
           export STRIP=${CROSS_COMPILE}strip
-          
-          # 核心修复：
-          # 1. 添加 -include sys/param.h 定义 MAXPATHLEN
-          # 2. 移除冲突的 __mips_isa_rev 手动定义（工具链自动生成）
-          # 3. 添加 -DLIBRETRO_NO_PLUGINS 禁用原生插件系统
-          export CFLAGS="-O2 -ffast-math -march=mips32 -mtune=mips32r2 -mhard-float -fdata-sections -ffunction-sections --sysroot=${SYSROOT} -D_GNU_SOURCE=1 -I. -include sys/param.h -DLIBRETRO_NO_PLUGINS"
+          # 修正CFLAGS：移除过度裁剪参数，补充MIPS专属定义，关闭过度优化
+          export CFLAGS="-march=mips32r2 -mtune=mips32r2 -mhard-float -mabi=32 -ffast-math -O2 -fPIC -D__mips__=1 -D__mipsel__=1 -DMIPS32=1 -DMIPS_HARD_FLOAT=1"
           export CXXFLAGS="${CFLAGS}"
-          export LDFLAGS="-march=mips32 -mtune=mips32r2 -mhard-float --sysroot=${SYSROOT} -lpthread -lm -ldl -lz -Wl,--gc-sections"
-          export LDLIBS="-lpthread -lm -ldl -lz"
+          # 补充LDFLAGS：确保链接完整，避免过度裁剪
+          export LDFLAGS="-shared -fPIC -Wl,--no-gc-sections -Wl,-z,now -Wl,-z,relro --sysroot=${SYSROOT}"
           
           echo "CROSS_COMPILE=$CROSS_COMPILE" >> $GITHUB_ENV
           echo "SYSROOT=$SYSROOT" >> $GITHUB_ENV
@@ -56,7 +53,6 @@ jobs:
           echo "CFLAGS=$CFLAGS" >> $GITHUB_ENV
           echo "CXXFLAGS=$CXXFLAGS" >> $GITHUB_ENV
           echo "LDFLAGS=$LDFLAGS" >> $GITHUB_ENV
-          echo "LDLIBS=$LDLIBS" >> $GITHUB_ENV
           echo "/opt/gcw0-toolchain/usr/bin" >> $GITHUB_PATH
 
       - name: Checkout pcsx_rearmed source code
@@ -66,83 +62,126 @@ jobs:
           path: pcsx_rearmed
           fetch-depth: 1
 
-      - name: Prepare build environment (修复config.h宏)
+      - name: Generate complete config.h (补充核心宏定义)
         run: |
           cd pcsx_rearmed
-          # 清理旧产物
-          make -f Makefile.libretro clean || true
-          
-          # 生成适配的config.h（删除冲突宏，补充必要定义）
           cat > config.h << EOF
-          /* 架构宏（移除冲突的__mips_isa_rev） */
+          // 基础架构定义
           #define ARCH_MIPS 1
           #define ARCH_MIPSEL 1
           #define __mips__ 1
           #define __mipsel__ 1
           #define MIPS32 1
           #define MIPS32R2 1
+          #define MIPS_HARD_FLOAT 1
+          #define __mips_abi硬浮点 1
           
-          /* libretro核心必备宏（禁用原生插件） */
+          // Libretro核心必需定义
           #define HAVE_LIBRETRO 1
-          #define LIBRETRO 1
-          #define LIBRETRO_NO_PLUGINS 1  // 关键：禁用原生插件系统
+          #define LIBRETRO_API __attribute__((visibility("default")))
           
-          /* 功能宏（简化，避免依赖） */
-          #define DISABLE_THREADS 1      // 暂时关闭多线程，减少依赖
-          #define SOUND_DRIVER_NONE 1
-          #define GPU_PEOPS 1
-          #define GPU_PEOPS_MIPS 1
+          // 功能模块启用（关键：不再禁用核心功能）
+          #define HAVE_DYNAREC 1
+          #define DYNAREC_MIPS 1
           #define DYNAREC_LIGHTREC 1
           #define DYNAREC_NONE 0
-          #define HAVE_DYNAREC 1
-          #define HAVE_FLOAT_EMU 1
+          #define GPU_PEOPS 1
+          #define GPU_PEOPS_MIPS 1
+          #define SOUND_DRIVER_SDL 1
+          #define SOUND_DRIVER_NONE 0
+          #define DISABLE_THREADS 0
+          #define HAVE_THREADS 1
           
-          /* 系统宏（补充MAXPATHLEN备用定义） */
-          #ifndef MAXPATHLEN
-          #define MAXPATHLEN 4096
-          #endif
-          #define SYSROOT "${{ env.SYSROOT }}"
-          #define CROSS_COMPILE "${{ env.CROSS_COMPILE }}"
+          // 系统库支持（补充缺失的关键宏）
           #define HAVE_STDINT_H 1
           #define HAVE_STDLIB_H 1
           #define HAVE_STRING_H 1
           #define HAVE_UNISTD_H 1
           #define HAVE_INTTYPES_H 1
+          #define HAVE_MALLOC_H 1
+          #define HAVE_STDARG_H 1
+          #define HAVE_STDDEF_H 1
+          #define HAVE_SYS_TYPES_H 1
+          #define HAVE_SYS_STAT_H 1
+          #define HAVE_FCNTL_H 1
+          #define HAVE_ERRNO_H 1
+          #define HAVE_SIGNAL_H 1
+          #define HAVE_PTHREAD_H 1
+          
+          // 函数支持
           #define HAVE_MEMCPY 1
           #define HAVE_MEMSET 1
-          #define _GNU_SOURCE 1
+          #define HAVE_MEMMOVE 1
+          #define HAVE_STRCMP 1
+          #define HAVE_STRNCMP 1
+          #define HAVE_STRCASECMP 1
+          #define HAVE_STRDUP 1
+          #define HAVE_STRERROR 1
+          #define HAVE_VSNPRINTF 1
+          #define HAVE_PRINTF 1
+          #define HAVE_SNPRINTF 1
+          #define HAVE_MALLOC 1
+          #define HAVE_FREE 1
+          #define HAVE_REALLOC 1
+          
+          // 工具链路径
+          #define SYSROOT "${{ env.SYSROOT }}"
+          #define CROSS_COMPILE "${{ env.CROSS_COMPILE }}"
+          
+          // 编译优化
+          #define HAVE_GCC_ATOMICS 1
+          #define HAVE_GCC_BUILTINS 1
+          #define HAVE_INLINE 1
+          #define PACKAGE_VERSION "gcw0-20260106"
+          #define VERSION "gcw0-20260106"
           EOF
           
-          # 验证生成
-          echo "✅ config.h生成路径：$(pwd)/config.h"
-          ls -la config.h
-          chmod 644 config.h
-
-      - name: Build pcsx_rearmed libretro core
-        run: |
-          cd pcsx_rearmed
-          # 验证前置条件
           if [ ! -f config.h ]; then
-            echo "ERROR: config.h缺失！"
+            echo "ERROR: 生成config.h失败！"
             exit 1
           fi
-          
-          # 编译（简化参数，依赖环境变量）
-          make -f Makefile.libretro \
-            PLATFORM=unix \
-            ARCH=mipsel \
-            HAVE_DYNAREC=1 \
-            GPU=peops \
-            -j$(nproc)
+          # 打印config.h内容，便于调试
+          cat config.h
+          echo "✅ config.h 生成成功"
 
-      - name: Verify build result
+      - name: Build pcsx_rearmed libretro core (完整参数)
         run: |
           cd pcsx_rearmed
+          # 彻底清理旧编译产物
+          make -f Makefile.libretro clean || rm -f pcsx_rearmed_libretro.so
+          # 完整编译参数：指定MIPS动态重编译、GPU、音频等核心模块
+          make -f Makefile.libretro \
+            PLATFORM=gcw0 \
+            ARCH=mipsel \
+            CROSS_COMPILE=${{ env.CROSS_COMPILE }} \
+            CC=${{ env.CC }} \
+            CXX=${{ env.CXX }} \
+            AR=${{ env.AR }} \
+            LD=${{ env.LD }} \
+            CFLAGS="${{ env.CFLAGS }}" \
+            CXXFLAGS="${{ env.CXXFLAGS }}" \
+            LDFLAGS="${{ env.LDFLAGS }}" \
+            HAVE_DYNAREC=1 \
+            DYNAREC=mips \
+            GPU=peops \
+            SOUND=sdl \
+            HAVE_THREADS=1 \
+            -j$(nproc)
+          # 可选：strip优化（不影响体积大小，仅移除调试信息）
+          ${{ env.STRIP }} --strip-unneeded pcsx_rearmed_libretro.so || echo "strip失败，跳过"
+
+      - name: Verify build result (详细检查)
+        run: |
+          cd pcsx_rearmed
+          # 检查产物存在性
           if [ -f pcsx_rearmed_libretro.so ]; then
-            FILE_SIZE=$(du -h pcsx_rearmed_libretro.so | awk '{print $1}')
-            echo "✅ 编译成功！产物路径：$(pwd)/pcsx_rearmed_libretro.so"
-            echo "✅ 产物体积：$FILE_SIZE"
-            file pcsx_rearmed_libretro.so || echo "⚠️ file命令验证跳过"
+            echo "✅ 编译成功！"
+            # 打印文件大小（关键验证）
+            ls -lh pcsx_rearmed_libretro.so
+            # 验证架构
+            file pcsx_rearmed_libretro.so
+            # 验证链接的符号（确保核心功能已编译）
+            ${{ env.CROSS_COMPILE }}nm -D pcsx_rearmed_libretro.so | grep -E "retro|gpu|sound|cpu" | head -10
           else
             echo "ERROR: 编译产物缺失！"
             exit 1
